--- a/whats-data-science-and-how-do-i-do-it.html
+++ b/whats-data-science-and-how-do-i-do-it.html
@@ -100,24 +100,42 @@
 </ul></li>
 <li class="chapter" data-level="4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html"><i class="fa fa-check"></i><b>4</b> Exploratory Data Analysis</a>
 <ul>
-<li class="chapter" data-level="4.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualizing-apartment-availability"><i class="fa fa-check"></i><b>4.1</b> Visualizing Apartment Availability</a>
+<li class="chapter" data-level="4.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#getting-started"><i class="fa fa-check"></i><b>4.1</b> Getting Started</a>
 <ul>
-<li class="chapter" data-level="4.1.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#import-clean-and-transform-the-data"><i class="fa fa-check"></i><b>4.1.1</b> Import, Clean and Transform the Data</a></li>
-<li class="chapter" data-level="4.1.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#days-lineplot"><i class="fa fa-check"></i><b>4.1.2</b> 365 Days Lineplot</a></li>
+<li class="chapter" data-level="4.1.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#importing-data"><i class="fa fa-check"></i><b>4.1.1</b> Importing Data</a></li>
+<li class="chapter" data-level="4.1.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#convert-milliseconds-to-minutes"><i class="fa fa-check"></i><b>4.1.2</b> Convert Milliseconds to Minutes</a></li>
+<li class="chapter" data-level="4.1.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#song-durations"><i class="fa fa-check"></i><b>4.1.3</b> Song Durations</a></li>
+<li class="chapter" data-level="4.1.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualizing-song-distributions"><i class="fa fa-check"></i><b>4.1.4</b> Visualizing Song Distributions</a></li>
 </ul></li>
-<li class="chapter" data-level="4.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualize-individual-airbnb-offers-with-the-listings-dataset"><i class="fa fa-check"></i><b>4.2</b> Visualize individual Airbnb offers with the listings dataset</a></li>
-<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merging-of-listings-and-reviewing-the-data-set"><i class="fa fa-check"></i><b>4.3</b> Merging of Listings and Reviewing the Data Set</a>
+<li class="chapter" data-level="4.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#time-series-data"><i class="fa fa-check"></i><b>4.2</b> Time Series Data</a>
 <ul>
-<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#your-first-barplot"><i class="fa fa-check"></i><b>4.3.1</b> Your First Barplot</a></li>
+<li class="chapter" data-level="4.2.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualizing-song-durations-over-time"><i class="fa fa-check"></i><b>4.2.1</b> Visualizing Song Durations over Time</a></li>
+<li class="chapter" data-level="4.2.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merge"><i class="fa fa-check"></i><b>4.2.2</b> Merge</a></li>
+<li class="chapter" data-level="4.2.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#line-plot"><i class="fa fa-check"></i><b>4.2.3</b> Line Plot</a></li>
+<li class="chapter" data-level="4.2.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#radar-plot-advanced"><i class="fa fa-check"></i><b>4.2.4</b> Radar Plot (Advanced)</a></li>
 </ul></li>
-<li class="chapter" data-level="4.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualization-with-maps"><i class="fa fa-check"></i><b>4.4</b> Visualization with Maps</a></li>
-</ul></li>
-<li class="chapter" data-level="5" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Price Prediction – Application of Statistical Methods</a>
+<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#artists"><i class="fa fa-check"></i><b>4.3</b> Artists</a>
 <ul>
-<li class="chapter" data-level="5.1" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-train"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (train)</a></li>
-<li class="chapter" data-level="5.2" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
-<li class="chapter" data-level="5.3" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#from-training-to-testing-making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing – Making Predictions</a></li>
-<li class="chapter" data-level="5.4" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
+<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#most-productive-artists"><i class="fa fa-check"></i><b>4.3.1</b> Most Productive Artists</a></li>
+<li class="chapter" data-level="4.3.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#charts"><i class="fa fa-check"></i><b>4.3.2</b> Charts</a></li>
+</ul></li>
+<li class="chapter" data-level="4.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#compare-artists-based-on-their-songs"><i class="fa fa-check"></i><b>4.4</b> Compare Artists Based on their Songs</a>
+<ul>
+<li class="chapter" data-level="4.4.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#pairplot-of-different-artists"><i class="fa fa-check"></i><b>4.4.1</b> Pairplot of different artists</a></li>
+<li class="chapter" data-level="4.4.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#discover-new-visualization-methods"><i class="fa fa-check"></i><b>4.4.2</b> Discover New Visualization Methods</a></li>
+</ul></li>
+<li class="chapter" data-level="4.5" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#analyse-personal-spotify-data"><i class="fa fa-check"></i><b>4.5</b> Analyse Personal Spotify Data</a>
+<ul>
+<li class="chapter" data-level="4.5.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#generate-bar-plot-with-top-10-artists"><i class="fa fa-check"></i><b>4.5.1</b> Generate Bar Plot with Top 10 artists</a></li>
+<li class="chapter" data-level="4.5.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualize-your-streaming-behavior"><i class="fa fa-check"></i><b>4.5.2</b> Visualize your Streaming Behavior</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="5" data-path="popularity-prediction-application-of-statistical-methods.html"><a href="popularity-prediction-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Popularity Prediction – Application of Statistical Methods</a>
+<ul>
+<li class="chapter" data-level="5.1" data-path="popularity-prediction-application-of-statistical-methods.html"><a href="popularity-prediction-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-train"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (train)</a></li>
+<li class="chapter" data-level="5.2" data-path="popularity-prediction-application-of-statistical-methods.html"><a href="popularity-prediction-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
+<li class="chapter" data-level="5.3" data-path="popularity-prediction-application-of-statistical-methods.html"><a href="popularity-prediction-application-of-statistical-methods.html#from-training-to-testing-making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing – Making Predictions</a></li>
+<li class="chapter" data-level="5.4" data-path="popularity-prediction-application-of-statistical-methods.html"><a href="popularity-prediction-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="excercise-checklist.html"><a href="excercise-checklist.html"><i class="fa fa-check"></i><b>6</b> Excercise Checklist</a></li>
 <li class="chapter" data-level="7" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html"><i class="fa fa-check"></i><b>7</b> What’s Next in Your Data Science Career?</a>
@@ -297,7 +315,7 @@ If you are convinced that this course does not provide any added value for you, 
 <div id="coding-meetups-and-requirements" class="section level3" number="2.3.1">
 <h3><span class="header-section-number">2.3.1</span> Coding Meetups and Requirements</h3>
 <p>Now that you have learned the theoretical foundation in the DataCamp courses, you can put your skills into practice. We have put together a project for you based on real data sets. You can read about the details in the following chapters of this project guide.<br />
-Of course, we will also go into more detail about the project and the tools that go with it. We will discuss everything you need to know during the first Coding Meetup, which will take place on <strong>December 9, 2020</strong>. After that, the work on the project will officially begin.
+Of course, we will also go into more detail about the project and the tools that go with it. We will discuss everything you need to know during the first Coding Meetup, which will take place on <strong>May 19, 2021</strong>. After that, the work on the project will officially begin.
 You can find the exact project tasks together with further explanations and hints in the following chapters.</p>
 <p>To receive the certificate, it is essential that you have solved at least two thirds of the “Exploratory Data Analysis” part of the project. For the advanced participants, the entire “Price Prediction – The Application of Statistical Models” part is added. In addition, two thirds of the respective curriculum on DataCamp must be completed. You can find more detailed information on this in the “Curriculum” section of the respective programming language above.</p>
 
