--- a/index.html
+++ b/index.html
@@ -100,24 +100,42 @@
 </ul></li>
 <li class="chapter" data-level="4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html"><i class="fa fa-check"></i><b>4</b> Exploratory Data Analysis</a>
 <ul>
-<li class="chapter" data-level="4.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualizing-apartment-availability"><i class="fa fa-check"></i><b>4.1</b> Visualizing Apartment Availability</a>
+<li class="chapter" data-level="4.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#getting-started"><i class="fa fa-check"></i><b>4.1</b> Getting Started</a>
 <ul>
-<li class="chapter" data-level="4.1.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#import-clean-and-transform-the-data"><i class="fa fa-check"></i><b>4.1.1</b> Import, Clean and Transform the Data</a></li>
-<li class="chapter" data-level="4.1.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#days-lineplot"><i class="fa fa-check"></i><b>4.1.2</b> 365 Days Lineplot</a></li>
+<li class="chapter" data-level="4.1.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#importing-data"><i class="fa fa-check"></i><b>4.1.1</b> Importing Data</a></li>
+<li class="chapter" data-level="4.1.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#convert-milliseconds-to-minutes"><i class="fa fa-check"></i><b>4.1.2</b> Convert Milliseconds to Minutes</a></li>
+<li class="chapter" data-level="4.1.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#song-durations"><i class="fa fa-check"></i><b>4.1.3</b> Song Durations</a></li>
+<li class="chapter" data-level="4.1.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualizing-song-distributions"><i class="fa fa-check"></i><b>4.1.4</b> Visualizing Song Distributions</a></li>
 </ul></li>
-<li class="chapter" data-level="4.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualize-individual-airbnb-offers-with-the-listings-dataset"><i class="fa fa-check"></i><b>4.2</b> Visualize individual Airbnb offers with the listings dataset</a></li>
-<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merging-of-listings-and-reviewing-the-data-set"><i class="fa fa-check"></i><b>4.3</b> Merging of Listings and Reviewing the Data Set</a>
+<li class="chapter" data-level="4.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#time-series-data"><i class="fa fa-check"></i><b>4.2</b> Time Series Data</a>
 <ul>
-<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#your-first-barplot"><i class="fa fa-check"></i><b>4.3.1</b> Your First Barplot</a></li>
+<li class="chapter" data-level="4.2.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualizing-song-durations-over-time"><i class="fa fa-check"></i><b>4.2.1</b> Visualizing Song Durations over Time</a></li>
+<li class="chapter" data-level="4.2.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#merge"><i class="fa fa-check"></i><b>4.2.2</b> Merge</a></li>
+<li class="chapter" data-level="4.2.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#line-plot"><i class="fa fa-check"></i><b>4.2.3</b> Line Plot</a></li>
+<li class="chapter" data-level="4.2.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#radar-plot-advanced"><i class="fa fa-check"></i><b>4.2.4</b> Radar Plot (Advanced)</a></li>
 </ul></li>
-<li class="chapter" data-level="4.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualization-with-maps"><i class="fa fa-check"></i><b>4.4</b> Visualization with Maps</a></li>
-</ul></li>
-<li class="chapter" data-level="5" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Price Prediction – Application of Statistical Methods</a>
+<li class="chapter" data-level="4.3" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#artists"><i class="fa fa-check"></i><b>4.3</b> Artists</a>
 <ul>
-<li class="chapter" data-level="5.1" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-train"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (train)</a></li>
-<li class="chapter" data-level="5.2" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
-<li class="chapter" data-level="5.3" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#from-training-to-testing-making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing – Making Predictions</a></li>
-<li class="chapter" data-level="5.4" data-path="price-prediction-application-of-statistical-methods.html"><a href="price-prediction-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
+<li class="chapter" data-level="4.3.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#most-productive-artists"><i class="fa fa-check"></i><b>4.3.1</b> Most Productive Artists</a></li>
+<li class="chapter" data-level="4.3.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#charts"><i class="fa fa-check"></i><b>4.3.2</b> Charts</a></li>
+</ul></li>
+<li class="chapter" data-level="4.4" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#compare-artists-based-on-their-songs"><i class="fa fa-check"></i><b>4.4</b> Compare Artists Based on their Songs</a>
+<ul>
+<li class="chapter" data-level="4.4.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#pairplot-of-different-artists"><i class="fa fa-check"></i><b>4.4.1</b> Pairplot of different artists</a></li>
+<li class="chapter" data-level="4.4.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#discover-new-visualization-methods"><i class="fa fa-check"></i><b>4.4.2</b> Discover New Visualization Methods</a></li>
+</ul></li>
+<li class="chapter" data-level="4.5" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#analyse-personal-spotify-data"><i class="fa fa-check"></i><b>4.5</b> Analyse Personal Spotify Data</a>
+<ul>
+<li class="chapter" data-level="4.5.1" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#generate-bar-plot-with-top-10-artists"><i class="fa fa-check"></i><b>4.5.1</b> Generate Bar Plot with Top 10 artists</a></li>
+<li class="chapter" data-level="4.5.2" data-path="exploratory-data-analysis.html"><a href="exploratory-data-analysis.html#visualize-your-streaming-behavior"><i class="fa fa-check"></i><b>4.5.2</b> Visualize your Streaming Behavior</a></li>
+</ul></li>
+</ul></li>
+<li class="chapter" data-level="5" data-path="popularity-prediction-application-of-statistical-methods.html"><a href="popularity-prediction-application-of-statistical-methods.html"><i class="fa fa-check"></i><b>5</b> Popularity Prediction – Application of Statistical Methods</a>
+<ul>
+<li class="chapter" data-level="5.1" data-path="popularity-prediction-application-of-statistical-methods.html"><a href="popularity-prediction-application-of-statistical-methods.html#examine-the-correlation-between-the-variables-train"><i class="fa fa-check"></i><b>5.1</b> Examine the Correlation Between the Variables (train)</a></li>
+<li class="chapter" data-level="5.2" data-path="popularity-prediction-application-of-statistical-methods.html"><a href="popularity-prediction-application-of-statistical-methods.html#first-predictions-with-simple-regression-models-train"><i class="fa fa-check"></i><b>5.2</b> First Predictions with Simple Regression Models (train)</a></li>
+<li class="chapter" data-level="5.3" data-path="popularity-prediction-application-of-statistical-methods.html"><a href="popularity-prediction-application-of-statistical-methods.html#from-training-to-testing-making-predictions"><i class="fa fa-check"></i><b>5.3</b> From Training to Testing – Making Predictions</a></li>
+<li class="chapter" data-level="5.4" data-path="popularity-prediction-application-of-statistical-methods.html"><a href="popularity-prediction-application-of-statistical-methods.html#apply-advanced-machine-learning-algorithms"><i class="fa fa-check"></i><b>5.4</b> Apply Advanced Machine Learning Algorithms</a></li>
 </ul></li>
 <li class="chapter" data-level="6" data-path="excercise-checklist.html"><a href="excercise-checklist.html"><i class="fa fa-check"></i><b>6</b> Excercise Checklist</a></li>
 <li class="chapter" data-level="7" data-path="whats-next-in-your-data-science-career.html"><a href="whats-next-in-your-data-science-career.html"><i class="fa fa-check"></i><b>7</b> What’s Next in Your Data Science Career?</a>
@@ -155,9 +173,9 @@
 <h1><span class="header-section-number">1</span> Welcome!</h1>
 <p>In the first few chapters you will be introduced to the basics of the <code>R</code> and <code>Python</code> tracks respectively and you will find helpful explanations to questions you might have in the beginning of your coding journey. There will be a quick introduction to the Data Science track so that you can get started with the project quickly. So let’s get started with the basics!</p>
 <p>In all tracks you will work on your project in small groups of fellow students. This not only helps you get the project done faster, it also helps make your results even better. Our experience shows: The different backgrounds of the members and discussing different opinions and ideas will produce the best results. Besides, it is of course more fun to work on a project together than to code alone!<br />
-The groups can consist of a maximum of three members. You can choose your two teammates independently, we won’t interfere with your arrangements. It is important that all group members complete the same level of difficulty (beginner or advanced), since the tasks are different in scope for each level. We explicitly encourage you to collaborate with students from different departments. This not only allows you to get to know people from other departments, but may even give you a whole new perspective on the project and tasks.
-When submitting it is important to note: for a certificate, each person must submit the project individually. However, this can be identical within your group. You can get more information at our first Coding Meetup on <strong>December 9, 2020</strong>.</p>
-<p>This Airbnb case study and the associated project guide was developed and written entirely from scratch by TechAcademy’s Data Science team. Lara Zaremba, Lukas Jürgensmeier, and Annalisa Strauß developed the project in <code>R</code>, while Felix Schneider and Manuel Mair am Tinkhof developed it in <code>Python</code>. We would also like to give special thanks to Benjamin Lucht for his extensive input when conceiving this project.</p>
+The groups can consist of a maximum of four members. You can choose your teammates independently, we won’t interfere with your arrangements. It is important that all group members complete the same level of difficulty (beginner or advanced), since the tasks are different in scope for each level. We explicitly encourage you to collaborate with students from different departments. This not only allows you to get to know people from other departments, but may even give you a whole new perspective on the project and tasks.<br />
+When submitting it is important to note: for a certificate, each person must submit the project individually. However, this can be identical within your group. You can get more information at our first Coding Meetup on <strong>May 19, 2021</strong>.</p>
+<p>This Spotify case study and the associated project guide was developed and written entirely from scratch by TechAcademy’s Data Science team. Karlo Lukic and Lara Zaremba developed the project in <code>R</code>, while Felix Schneider and Manuel Mair am Tinkhof developed it in <code>Python</code>.</p>
 </div>
             </section>
 
