--- a/excercise-checklist.html
+++ b/excercise-checklist.html
@@ -187,12 +187,12 @@
 <li><strong>Artists</strong></li>
 </ol>
 <p>3.1 Bar Plot with artists with most songs</p>
-<p>3.2 TODO: Map &amp; merge</p>
+<p>3.2 Map with top songs in each country</p>
 <ol start="4" style="list-style-type: decimal">
 <li><strong>Pairplot: Artist Comparison</strong></li>
 </ol>
 <p>4.1 Look for three different artists and compare the features of the songs with a pairplot</p>
-<p>4.2 Go on <a href="https://seaborn.pydata.org/examples/index.html#" class="uri">https://seaborn.pydata.org/examples/index.html#</a> , look for a plot which could be used to visualize an aspect of the spotfiy data and generate a plot</p>
+<p>4.2 Look at the proposed galary and look for a plot which could be used to visualize an aspect of the spotfiy data and generate a plot</p>
 <p>4.3 What is the message of your plot? What does it show?</p>
 <p><strong>Data: Personal Spotify Data</strong></p>
 <ol start="5" style="list-style-type: decimal">
