switched map.png to map.gif
to check if quality is good enough, else revert changes or change gif quality (attention to file size).

--- a/exploratory-data-analysis.html
+++ b/exploratory-data-analysis.html
@@ -402,7 +402,7 @@ geo_data = json.loads(response.content)</code></pre>
 Having done that, add the hover effect displaying each country’s top song with <code>geo.add_child(folium.GeoJsonTooltip(...)</code> and specify fields and aliases through the method’s parameters. There is no need to assign this to a variable. You can look up folium’s <code>GeoJsonTooltip</code> class online to understand how are fields and aliases passed as arguments.
 Display the map by solely typing the letter <code>m</code>.</p>
 </div>
-<p><img src="splots/map.PNG" width="100%" style="display: block; margin: auto;" /></p>
+<p><img src="splots/map.gif" width="100%" style="display: block; margin: auto;" /></p>
 </div>
 </div>
 <div id="compare-artists-based-on-their-songs" class="section level2" number="4.4">
