removed "-" in ordered list tag

--- a/exploratory-data-analysis.html
+++ b/exploratory-data-analysis.html
@@ -351,13 +351,14 @@ Then apply the <code>.melt("year")</code> method on the data frame and have a lo
 <p>Done that, you can create the radial plot with the <code>px.line_polar(...)</code> method. The documentation (google something like “plotly express radar chart” to find the documentation) tells you which arguments you need (and can) pass to this method:
 <ul>
   <li>
-    - Of course, you need to pass some value for the <code>data_frame</code> argument. For our purpose, this will be the melted data frame.
+    Of course, you need to pass some value for the <code>data_frame</code> argument. For our purpose, this will be the melted data frame.
   </li>
   <li>
-    - You’ll also need to pass values for the keyword arguments <code>r</code>, <code>theta</code>, <code>animation_frame</code>, <code>line_close</code>, and <code>range_r</code>.
+    You’ll also need to pass values for the keyword arguments <code>r</code>, <code>theta</code>, <code>animation_frame</code>, <code>line_close</code>, and <code>range_r</code>.
+    The values for these arguments are the strings <code>“value”</code>, <code>“variable”</code>, <code>“year”</code>, the boolean value <code>True</code>, and the tuple <code>(0,1)</code> respectively.
   </li>
 </ul>
-The values for these arguments are the strings <code>“value”</code>, <code>“variable”</code>, <code>“year”</code>, the boolean value <code>True</code>, and the tuple <code>(0,1)</code> respectively.</p>
+</p>
 <p>Apply <code>.show()</code> directly after the <code>line_polar(...)</code> method to display the plot.</p>
 <p>As always, try updating font size, layout, etc., as you like.</p>
 </div>
